# openEtG

./: .babelrc  .editorconfig  .gitignore  .gitmodules  .prettierignore  .prettierrc  .travis.yml  AI_Card_Probabilities.xlsx  Actives.js  Card.js  CardSelector.js  Cards.js  Cards.json  ColorMatrixFilter.js  ColorMatrixShader.js  Components.js  DeckDisplay.js  Decks.js  Decks.json  Effect.js  Game.js  Gruntfile.js  InteractionManager.js  MainMenu.js  MersenneTwister.js  Player.js  Quest.js  README.md  RngMock.js  Shaders.js  Skills.js  Sock.js  Starter decks.txt  Status.js  Thing.js  Tutor.js  _mktable.js  _tests.js  active.csv  actives.js  (+87 more)
.github/workflows/: cargo-test.yml  npm-test.yml
Components/: Chat.js  index.js
ai/: deck.js  eval.js  lethal.js  mulligan.js  search.js
assets/: Thumbs.db  atlas.json
cia/: Cards.json  index.html  readme.txt
scripts/: Card.js  _mktable.js  _tests.js  aibench.js  deckstats.js  fixusers.js  initdb.sql  migratetopg.js  mkatlascss.js  mkbuildbat.js  mkrng.js  mkrs-server.js  mkrs.js  mktable.js  replays.json  resetpass.js  sheet.js  tests.js
sound/: avesChallenge.opus  avesElemental.opus  click.opus  creaPlay.opus  devour.opus  dive.opus  draw1.opus  draw2.opus  draw3.opus  draw4.opus  freeze.opus  lobo.opus  mulligan.opus  openingMusic.opus  permPlay.opus  poison.opus  shuffle.opus  skelify.opus  stasis.opus
src/: AiWorker.js  AiWorker.ts  AllCards.js  AsyncWorker.js  Card.js  Cards.js  Cards.json  Cards.json.orig  CardsClass.js  Decks.json  Effect.js  Game.js  MersenneTwister.js  Player.js  Quest.js  Rng.js  RngMock.js  Skill.js  Skills.js  Thing.js  ai.worker.js  ai.worker.ts  aivai.js  audio.js  audio.ts  cards.csv  deckgen.js  etg.js  etgutil.js  immutable.js  mkAi.js  mkGame.js  options.js  original-starter.json  parseChat.js  parseSkill.js  rng.js  rng.wasm  rng.wat  skillText.js  (+11 more)
src/Components/: Card.jsx  CardImage.jsx  CardSelector.jsx  Chat.js  Chat.jsx  DeckDisplay.jsx  Editor.js  Editor.jsx  ExitBtn.jsx  IconBtn.jsx  Text.jsx  Tutor.js  Tutor.jsx  index.js  index.jsx
src/ai/: ai.worker.js  deck.js  eval.js  lethal.js  mulligan.js  search.js
src/deckgen/: Builder.js  bow.js  duo.js  index.js
src/rs/: .gitignore  Cargo.toml  build.rs  rustfmt.toml
src/rs/fuzz/: Cargo.toml
src/rs/fuzz/src/: main.rs
src/rs/server/: .gitignore  Cargo.toml  build.rs
src/rs/server/src/: cardpool.rs  etgutil.rs  handleget.rs  handlews.rs  http_date.rs  json.rs  main.rs  starters.rs  users.rs
src/rs/server/src/svg/: card.rs  deck.rs  mod.rs
src/rs/src/: aieval.rs  aisearch.rs  card.rs  deckgen.rs  etg.rs  game.rs  lib.rs  rng.rs  skill.rs  skill.rs.orig  text.rs  text.rs.orig
src/srv/: Bz.js  Lock.js  Us.js  cache.js  card.js  collection.js  db.js  deck.js  file.js  forkcore.js  gzip.js  login.js  original-starter.json  pg.js  speed.js  sutil.js
src/tournament/: commoner.js  dodrio.js
src/ui/: aivai.js  art.js  deck.js  deck.jsx  main.js  main.jsx  mosaic.js  soi.jsx  ui.art.js
src/vanilla/: Card.js  Cards.js  Cards.json  Components.js  Decks.json  Effect.js  Game.js  Player.js  RngMock.js  Skills.js  Thing.js  _tests.js  aivai.js  cards.csv  chat.js  etg.js  main.js  mkAi.js  mkGame.js  mkTable.js  parseChat.js  skillText.js  sock.js  store.js  ui.js
src/vanilla/ai/: deck.js  eval.js  lethal.js  search.js
src/vanilla/tournament/: barbershop.js  elementstone.js  heartoftheswarm.js  inception.js  origins.js  powerless3.js  quantacontrolreturns.js  rotation.js  shoecobbler.js  specialization2.js  specialization3.js  superstitionsofrationality.js  symmetricity.js  tamerandomness.js  threescompanytwo.js  valentine.js  venomouspoison.js  wintercoming.js
src/vanilla/ui/: aivai.js  boltcalc.js  cia.js  deckinfo.js  evadecalc.js  main.js  namegame.js  speed.js
src/vanilla/views/: App.js  Bazaar.js  Bazaar.jsx  Editor.js  Editor.jsx  Login.js  Login.jsx  MainMenu.js  MainMenu.jsx  Match.js  Result.js  Result.jsx  Rightpane.js  Upgrade.js  Upgrade.jsx  Wealth.jsx
src/views/: Alts.jsx  App.js  App.jsx  ArenaEditor.js  ArenaEditor.jsx  ArenaInfo.js  ArenaInfo.jsx  ArenaTop.js  ArenaTop.jsx  Bazaar.js  Bazaar.jsx  Challenge.js  Challenge.jsx  Colosseum.js  Colosseum.jsx  DeckEditor.js  DeckEditor.jsx  ElementSelect.js  ElementSelect.jsx  ImportAccount.js  KongLogin.jsx  Leaderboards.jsx  Library.js  Library.jsx  Login.js  Login.jsx  MainMenu.js  MainMenu.jsx  Match.js  Match.jsx  Quest.js  Quest.jsx  QuestArea.js  QuestMain.js  Result.js  Result.jsx  Reward.js  Reward.jsx  Rightpane.js  Rightpane.jsx  (+9 more)
srv/: Us.js  cache.js  card.js  cardredirect.js  codesmith.js  db.js  deck.js  deckredirect.js  file.js  forkcore.js  forksrv.js  login.js  loginauth.js  speed.js  starter.js  starter.json  sutil.js
tournament/: commoner.js  dodrio.js
vanilla/: Actives.js  Card.js  Cards.json  Decks.json  Effect.js  Game.js  InteractionManager.js  Player.js  RngMock.js  Thing.js  _tests.js  aivai.htm  boltcalc.ejs  boltcalc.htm  build.ninja  buildOpenEtg.bat  buildOpenEtg.mac  chat.js  deckinfo.ejs  deckinfo.htm  etg.js  evadecalc.ejs  evadecalc.htm  genmatchups.html  gfx.js  index.html  mkAi.js  namegame.ejs  namegame.htm  px.js  readme.txt  search.sh  skillText.js  sock.js  speed.ejs  speed.htm  store.js  tournament.htm  trials.htm  ui.js  (+1 more)
vanilla/ai/: deck.js  eval.js  lethal.js  search.js
vanilla/tournament/: elementstone.js  inception.js  origins.js  quantacontrolreturns.js  rotation.js  specialization3.js  symmetricity.js  threescompanytwo.js  wintercoming.js
vanilla/views/: App.js  Editor.js  Login.js  Match.js  Result.js
views/: App.js  ArenaEditor.js  ArenaInfo.js  ArenaTop.js  Bazaar.js  Challenge.js  Chat.js  Colosseum.js  DeckEditor.js  Editor.js  ElementSelect.js  Library.js  Login.js  MainMenu.js  Match.js  MatchResult.js  QuestArea.js  QuestMain.js  Result.js  Reward.js  Rightpane.js  SandboxEditor.js  Shop.js  Trade.js  Upgrade.js  WealthTop.js
