[package]
name = "etg"
version = "0.1.0"
authors = ["serprex"]
edition = "2021"
description = "openEtG rust module"
license = "MIT"
repository = "https://github.com/serprex/openEtG"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
rand = { version = "0.8", default-features = false }
rand_pcg = { version = "0.3", default-features = false }
fxhash = "0.2"

[build-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.91"
console_error_panic_hook = { version = "0.1.6", optional = true }

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
