[package]
name = "etg"
version = "0.1.0"
authors = ["serprex"]
edition = "2021"
description = "openEtG rust module"
license = "MIT"
repository = "https://github.com/serprex/openEtG"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
fxhash = "0.2"

[build-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.92"
console_error_panic_hook = "0.1"
talc = { version = "4.3", default-features = false, features = ["lock_api"] }

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = true
