[package]
name = "etg"
version = "0.1.0"
authors = ["serprex"]
edition = "2024"
description = "openEtG rust module"
license = "MIT"
repository = "https://github.com/serprex/openEtG"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
fxhash = "0.2"

[build-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
talc = { version = "5", default-features = false }

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = true
