[package]
name = "etg-fuzz"
version = "0.1.0"
authors = ["serprex"]
edition = "2021"
description = "openEtG fuzzer"
license = "MIT"
repository = "https://github.com/serprex/openEtG"

[profile.dev]
opt-level = 1

[dependencies]
etg = { version = "0.1", path = "../" }
rand = { version = "0.8", default-features = false }
rand_pcg = { version = "0.3", default-features = false }
rayon = "1.5"