[package]
name = "etg-server"
version = "0.1.0"
authors = ["serprex"]
edition = "2024"
description = "openEtG server"
license = "MIT"
repository = "https://github.com/serprex/openEtG"

[profile.dev]
opt-level = 1

[profile.release]
lto = "thin"

[dependencies]
base64 = { version = "0.22", default-features = false, features = ["alloc"] }
bb8-postgres = { version = "0.9", features = ["with-serde_json-1"] }
brotli = { version = "8", default-features = false, features = ["std"] }
etg = { version = "0.1", default-features = false, path = "../" }
futures = { version = "0.3", default-features = false, features = ["alloc"] }
fxhash = "0.2"
getrandom = "0.3"
http-body-util = "0.1.0"
hyper = { version = "1", features = ["http1", "server"] }
hyper-tungstenite = "0.17"
hyper-util = { version = "0.1", default-features = false }
tokio-rustls = { version = "0.26", default-features = false, features = ["aws-lc-rs"] }
postgres-types = { version = "0.2", features = ["derive"] }
aws-lc-rs = { version = "1" }
rand = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
httpdate = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
webpki-roots = "1"

[build-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
